[package]
name = "kh358extractor"
version = "0.3.0"
authors = ["Nuclearfarts <Nuclearfarts@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.6.0"
nintendo-lz = "0.1.3"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"
