[package]
name = "kh358extractor"
version = "0.3.0"
authors = ["Nuclearfarts <Nuclearfarts@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.6.0"
nintendo-lz = "0.1.3"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"
cty = "0.2.1"
[build-dependencies]
cc = "1.0"

[profile.release]
debug = true